--- a/wdd330-Final-Project-main/index.html
+++ b/wdd330-Final-Project-main/index.html
@@ -20,7 +20,8 @@
             <!-- <input type="time" id="dueTime" /> -->
             <button id="addTask"><i class="fa fa-plus"></i> Add Task</button>
         </section>
-   
+         <!-- Triggering GitHub Pages rebuild -->
+
         <section class="filters">
             <button data-filter="all">All</button>
             <button data-filter="pending">Pending</button>
